Fix: spacing

--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,3 @@
     margin-bottom: 15px !important;
     font-style: italic;
 }
-
-.services-overview {
-    padding-bottom: 50px;
-}
